# Birthbase

./: .gitignore  components.json  index.html  jsconfig.json  latest (8).json  manifest.json  package-lock.json  package.json  sw.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: main.yml
_locales/de/: messages.json
_locales/en/: messages.json
coverage/: clover.xml
coverage/lcov-report/: index.html
public/: manifest.json  robots.txt
src/: App.jsx  App.tsx  entry.ts  env.d.ts  global.d.ts  index.css  init.ts  main.jsx  main.tsx  util.js  util.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs
src/apis/: notification.ts  tauri_notification.ts
src/assets/: index.css
src/backend/: init.ts  updater.ts
src/birthdays/: Birthdays.jsx  DataTable.jsx  Table.tsx  birthdays.js  columns.jsx  columns.tsx
src/components/: AddBirthdayButton.tsx  App.tsx  Birthbase.tsx  Content.jsx  DataTable.tsx  Dropzone.tsx  DropzoneFile.tsx  DropzoneProgress.tsx  DynNavLink.jsx  ErrorBoundary.tsx  History.tsx  Markdown.tsx  ModeToggle.jsx  Navbar.jsx  Navbar.tsx  Navigation.tsx  OnlyTauri.tsx  PageWrapper.jsx  PageWrapper.tsx  RadioList.jsx  Select.tsx  Sidebar.tsx  Switch.jsx  ThemeProvider.jsx  Translate.tsx  color-provider.jsx  main.tsx
src/constants/: nav_entries.ts  tauri.ts
src/crossplatform_lib/: object.ts
src/database/: _db.ts  birthbase.ts  database_exports.ts  db.ts  db_types.ts  dexie_db.ts  mysql_db.ts  types.ts
src/flowFiles/: initializeLanguage.ts  initializeSettings.ts  initializeWorker.ts  startUp.ts
src/frontend/: App.tsx  index.css  init.ts  initPushNotifications.ts  loader.ts  main.tsx  mangage_workers.ts  pre_react_init.ts
src/hooks/: use-tableSortURL.tsx  useAppToast.ts  useBirthdayForm.ts  useConfirmDialog.ts  useDeleteBirthday.ts  useDeviceSize.tsx  useFileStreamProgressWorker.ts  useHistory.tsx  useNavbar.tsx  useProgress.ts  useSettings.ts  useShortcuts.ts  use_app_confirm.ts  use_app_navbar.ts  use_app_store.ts  use_app_toast.tsx  use_birthday_form.ts  use_birthday_mutation.ts  use_load_translation.ts  use_nav_entries.ts  use_notification_msg.ts  use_notification_mutation.ts  use_query_mutation.ts  use_react_init.ts  use_settings_form.ts  use_settings_mutation.ts  use_table_sort_url.tsx  use_update_store.ts
src/i18n/: config.ts  load.ts  type.ts
src/icons/: MdOutlineClearNight.jsx  MdOutlineSettings.jsx  MdOutlineSettings.tsx  MdOutlineSunny.jsx  MdOutlineSunny.tsx
src/init/: init.ts  init_frontend.ts  init_worker.ts  tauri_init.ts  updater_init.ts
src/layouts/: AppLayout.tsx  MainLayout.jsx  MainLayout.tsx
src/lib/: main_util.ts  type_util.d.ts  vite.ts
src/middleware/: birthday.ts  notification.ts  settings.ts
src/pages/: FormBirthday.jsx  Home.jsx  Home.tsx  MyBirthdays.jsx  MyBirthdays.tsx  NotFound.jsx  NotFound.tsx  Notifications.tsx  Settings.jsx
src/storagesize/: StorageSize.tsx  columns.tsx
src/store/: store.ts  util.d.ts
src/stores/: use_app_store.ts  use_backup_store.ts  use_birthday_form_store.ts  use_confirm_store.ts  use_nav_entries_store.ts  (+3 more)
(+481 files in other folders)
