[package]
name = "birthday"
version = "0.1.0"
description = "Storing and Managing Birthdays"
authors = ["Max Voigt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "birthday_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[dependencies]
# chrono = "0.4.38"
# warp = "0.3.7"
# tokio = "1.38.0"
# rocket= "0.5.1"
tauri = { version = "1.7.1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
