[package]
name = "birthday"
version = "0.1.0"
description = "Storing and Managing Birthdays"
authors = ["Max Voigt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[dependencies]
# chrono = "0.4.38"
# warp = "0.3.7"
# tokio = "1.38.0"
# rocket= "0.5.1"
tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs"}
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-updater = "^2.0.0-beta.12"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "^2.0.0-beta.12"
